v1.1.0/modules/schema/pages/class/WindingInsulation.adoc
= `WindingInsulation`
:toclevels: 4


+++Winding insulation condition as a result of a test.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindingInsulation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindingInsulation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<FromWinding,`FromWinding`>>
//| [[slots_table.FromWinding]]<<FromWinding,`FromWinding`>>
| 1 +
xref::class/TransformerEnd.adoc[`TransformerEnd`]
| _n/a_
| _n/a_

| <<ToWinding,`ToWinding`>>
//| [[slots_table.ToWinding]]<<ToWinding,`ToWinding`>>
| 1 +
xref::class/TransformerEnd.adoc[`TransformerEnd`]
| _n/a_
| _n/a_

| <<TransformerObservation,`TransformerObservation`>>
//| [[slots_table.TransformerObservation]]<<TransformerObservation,`TransformerObservation`>>
| 0..1 +
xref::class/TransformerObservation.adoc[`TransformerObservation`]
| _n/a_
| _n/a_

| <<insulationPFStatus,`insulationPFStatus`>>
//| [[slots_table.insulationPFStatus]]<<insulationPFStatus,`insulationPFStatus`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Status of Winding Insulation Power Factor as of statusDate: Acceptable, Minor Deterioration or Moisture Absorption, Major...+++
| _n/a_

| <<insulationResistance,`insulationResistance`>>
//| [[slots_table.insulationResistance]]<<insulationResistance,`insulationResistance`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++For testType, status of Winding Insulation Resistance as of statusDate. Typical values are: Acceptable, Questionable, Failed.+++
| _n/a_

| <<leakageReactance,`leakageReactance`>>
//| [[slots_table.leakageReactance]]<<leakageReactance,`leakageReactance`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++As of statusDate, the leakage reactance measured at the "from" winding with the "to" winding short-circuited and all other...+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#FromWinding]
=== `FromWinding`



[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.FromWinding`
| Cardinality
| 1
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.FromWinding,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#insulationPFStatus]
=== `insulationPFStatus`
+++Status of Winding Insulation Power Factor as of statusDate: Acceptable, Minor Deterioration or Moisture Absorption, Major Deterioration or Moisture Absorption, Failed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.insulationPFStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.insulationPFStatus,&#10548;>>
--
////


//[discrete]
[#insulationResistance]
=== `insulationResistance`
+++For testType, status of Winding Insulation Resistance as of statusDate. Typical values are: Acceptable, Questionable, Failed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.insulationResistance`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.insulationResistance,&#10548;>>
--
////


//[discrete]
[#leakageReactance]
=== `leakageReactance`
+++As of statusDate, the leakage reactance measured at the "from" winding with the "to" winding short-circuited and all other windings open-circuited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.leakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.leakageReactance,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ToWinding]
=== `ToWinding`



[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.ToWinding`
| Cardinality
| 1
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.ToWinding,&#10548;>>
--
////


//[discrete]
[#TransformerObservation]
=== `TransformerObservation`



[cols="h,4",width=65%]
|===
| URI
| `cim:WindingInsulation.TransformerObservation`
| Cardinality
| 0..1
| Type
| xref::class/TransformerObservation.adoc[`TransformerObservation`]


|===

////
[.text-left]
--
<<slots_table.TransformerObservation,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TransformerEnd.adoc[`TransformerEnd`] | xref::class/TransformerEnd.adoc#ToWindingInsulations[`ToWindingInsulations`]



| xref::class/TransformerObservation.adoc[`TransformerObservation`] | xref::class/TransformerObservation.adoc#WindingInsulationPFs[`WindingInsulationPFs`]


|===

